daylight-equation/fixtures/daylight-v06-m1/vectors/negative/N12_bad_claims_hash/AuthMsg.hex
8378216461796c696768742e617574686f72697a6174696f6e2e6d6573736167652e763675575543492d4441594c494748543a415554483a76365840d06d224232996a12361e2ad727f11832c98c72d6a0342632ad6414515b7e94d6f1fb799d4571a893849fdb2b755f682b8e0536508694a2fe5fd8bb40339fc5c4
